@@ -6,8 +6,11 @@ import co.axelrod.webserver.impl.http.protocol.response.HttpResponse;
 import co.axelrod.webserver.impl.http.protocol.response.HttpStatus;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class HttpRequestHandler implements RequestHandler<HttpRequest, HttpResponse> {
     private final String rootPath;
@@ -18,7 +21,13 @@ public class HttpRequestHandler implements RequestHandler<HttpRequest, HttpRespo
 
     public byte[] getFileByPath(String path) throws IOException {
         path = normalizePath(path);
-        return Files.readAllBytes(Path.of(rootPath + path));
+        try {
+            return Files.readAllBytes(
+                    Paths.get(new URI("file:///" + rootPath + path))
+            );
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
     }
 
     private String normalizePath(String path) {
